# SID-SLAM

./: CMakeLists.txt  README.md  package.xml  systemSettings.yaml
Examples/RGB-D/ETH/: rgbdETH.cpp
Examples/RGB-D/ETH/cables_1/: sequenceSettings.yaml
Examples/RGB-D/ETH/cables_2/: sequenceSettings.yaml
Examples/RGB-D/ETH/camerasETH/: eth.yaml
Examples/RGB-D/ETH/einstein_1/: sequenceSettings.yaml
Examples/RGB-D/ETH/large_non_loop/: sequenceSettings.yaml
Examples/RGB-D/ETH/mannequin_3/: sequenceSettings.yaml
Examples/RGB-D/ETH/mannequin_face_2/: sequenceSettings.yaml
Examples/RGB-D/ETH/planar_2/: sequenceSettings.yaml
Examples/RGB-D/ETH/plant_1/: sequenceSettings.yaml
Examples/RGB-D/ETH/plant_2/: sequenceSettings.yaml
Examples/RGB-D/ETH/plant_3/: sequenceSettings.yaml
Examples/RGB-D/ETH/plant_4/: sequenceSettings.yaml
Examples/RGB-D/ETH/plant_5/: sequenceSettings.yaml
Examples/RGB-D/ETH/plant_scene_1/: sequenceSettings.yaml
Examples/RGB-D/ETH/sofa_1/: sequenceSettings.yaml
Examples/RGB-D/ETH/table_3/: sequenceSettings.yaml
Examples/RGB-D/ETH/table_4/: sequenceSettings.yaml
Examples/RGB-D/ETH/table_7/: sequenceSettings.yaml
Examples/RGB-D/MT/: rgbdMT.cpp
Examples/RGB-D/MT/ardea_01/: sequenceSettings.yaml
Examples/RGB-D/MT/camerasID/: id.yaml
Examples/RGB-D/MT/circle_dodecagon/: sequenceSettings.yaml
Examples/RGB-D/MT/circle_hexagon/: sequenceSettings.yaml
Examples/RGB-D/MT/circle_square/: sequenceSettings.yaml
Examples/RGB-D/MT/circles_01/: sequenceSettings.yaml
Examples/RGB-D/MT/dodecagon_01/: sequenceSettings.yaml
Examples/RGB-D/MT/hexagon_01/: sequenceSettings.yaml
Examples/RGB-D/MT/lines_01/: sequenceSettings.yaml
Examples/RGB-D/MT/lru_01/: sequenceSettings.yaml
Examples/RGB-D/MT/sand_rocks_01/: sequenceSettings.yaml
Examples/RGB-D/MT/sand_rocks_02/: sequenceSettings.yaml
Examples/RGB-D/MT/sand_rocks_03/: sequenceSettings.yaml
Examples/RGB-D/MT/square_01/: sequenceSettings.yaml
Examples/RGB-D/MT/triangle_01/: sequenceSettings.yaml
Examples/RGB-D/MT/triangle_02/: sequenceSettings.yaml
Examples/RGB-D/MT/triangle_03/: sequenceSettings.yaml
Examples/RGB-D/NUIM/: rgbdNUIM.cpp
Examples/RGB-D/NUIM/camerasNUIM/: nuim.yaml
Examples/RGB-D/NUIM/living_room_traj0_frei_png/: sequenceSettings.yaml
Examples/RGB-D/NUIM/living_room_traj1_frei_png/: sequenceSettings.yaml
Examples/RGB-D/NUIM/living_room_traj2_frei_png/: sequenceSettings.yaml
Examples/RGB-D/NUIM/living_room_traj3_frei_png/: sequenceSettings.yaml
Examples/RGB-D/NUIM/traj0_frei_png/: sequenceSettings.yaml
Examples/RGB-D/NUIM/traj1_frei_png/: sequenceSettings.yaml
Examples/RGB-D/NUIM/traj2_frei_png/: sequenceSettings.yaml
Examples/RGB-D/NUIM/traj3_frei_png/: sequenceSettings.yaml
Examples/RGB-D/TUM/: rgbdTUM.cpp
Examples/RGB-D/TUM/camerasTUM/: freiburg1.yaml  freiburg2.yaml  freiburg3.yaml
Examples/RGB-D/TUM/rgbd_dataset_freiburg1_desk/: sequenceSettings.yaml
Examples/RGB-D/TUM/rgbd_dataset_freiburg1_desk2/: sequenceSettings.yaml
Examples/RGB-D/TUM/rgbd_dataset_freiburg1_plant/: sequenceSettings.yaml
classes/: Pose.cpp  PoseGraphOptimizer.cpp  SID_SLAM.cpp  Visualizer.cpp  backEnd.cpp  informationFunctions.cpp
classes/Camera/: Camera.cpp  camPinhole.cpp  camPinholeDist.cpp
classes/Frame/: Frame.cpp  ImageFunctions.cpp
classes/FrontEnd/: emergencyTracking.cpp  frontEnd.cpp  informationFrontEnd.cpp  loopClosure.cpp  trackingFrontEnd.cpp
classes/Optimizer/: DepthOptimizer.cpp  OptimizerCeres.cpp
classes/PointSelector/: PointSelector.cpp  pointSelector_features.cpp  pointSelector_hgp.cpp
classes/Pt/: Pt.cpp  perspectiveDeformation.cpp  ptJacobians.cpp
classes/Tracker/: CeresTracker.cpp  RIA_CeresTracker.cpp  Tracker.cpp
executables/: runIDNav_0.sh
include/: Camera.h  Frame.h  MotionEstimator.h  PointSelector.h  Pose.h  PoseGraphOptimizer.h  Pt.h  SID_SLAM.h  Visualizer.h  backEnd.h  trackingFrontEnd.h
include/Optimizer/: OptimizerCeres.h  Projection.h
include/Tracker/: CeresTracker.h  Tracker.h
lib/: .gitignore
utils/: Profiler.h  SequenceSettings.cpp  SequenceSettings.h  SystemSettings.cpp  SystemSettings.h  definesAndIncludes.h  file_functions.cpp  file_functions.h  informationFunctions.h  math_functions.h  test_functions.h
(+32 files in other folders)
